Fixing spacing issues for mobile views

--- a/src/pages/styles.scss
+++ b/src/pages/styles.scss
@@ -10,5 +10,5 @@ $light-green: #CCFF99;
 
 // update bulma's global variables
 $success: $light-yellow;
-$footer-padding: 0rem 1.5rem 6rem 3rem;
+$footer-padding: 0rem 1.5rem 6rem;
 @import "~bulma/bulma.sass";
